<resources>
    <string name="app_name">Wearable</string>
    <string name="my_analog_name">My Analog</string>

    <string name="digital_name">Sample Digital</string>
    <string name="digital_background_color">Background color</string>
    <string name="digital_config_name">Digital watch face configuration</string>
    <string name="digital_am">AM</string>
    <string name="digital_pm">PM</string>




    <string name="analog_config_text">This is the config activity for the Analog and Card Bounds watch faces</string>
    <string name="digital_config_text">Digital watch face configuration</string>
    <string name="opengl_config_text">OpenGL watch face configuration</string>
    <string name="digital_config_background">Background</string>
    <string name="digital_config_hours">Hours</string>
    <string name="digital_config_minutes">Minutes</string>
    <string name="digital_config_seconds">Seconds</string>

    <!-- TODO: this should be shared (needs covering all the samples with Gradle build model) -->
    <string name="color_black">Black</string>
    <string name="color_blue">Blue</string>
    <string name="color_gray">Gray</string>
    <string name="color_green">Green</string>
    <string name="color_navy">Navy</string>
    <string name="color_red">Red</string>
    <string name="color_white">White</string>

    <string-array name="color_array">
        <item>@string/color_black</item>
        <item>@string/color_blue</item>
        <item>@string/color_gray</item>
        <item>@string/color_green</item>
        <item>@string/color_navy</item>
        <item>@string/color_red</item>
        <item>@string/color_white</item>
    </string-array>
</resources>
